--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
+    <%- include('includes/head') %> 
 <body>
-    <header>
-        <h2>
-            <a href="/">Our wonderfull App</a>
-        </h2>
-        <nav>
-            <a href="/login">Log in</a>
-        </nav>
-    </header>
+    <%- include('includes/header') %> 
     <main>
         <form action="/register" method="POST">
             <% errors.forEach((error) => { %>
@@ -41,10 +29,6 @@
             </fieldset>
         </form>
     </main>
-    <footer>
-        <small>
-            &copy; Our wonderfull app
-        </small>
-    </footer>
+    <%- include('includes/footer') %> 
 </body>
 </html>
