--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
+    <%- include('includes/head') %> 
 <body>
-    <header>
-        <h2>
-            <a href="/">Our wonderfull App</a>
-        </h2>
-        <nav>
-            <a href="/login">Log in</a>
-        </nav>
-    </header>
+    <%- include('includes/header') %> 
     <main>
-        <h3>Log in page</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates eum quod laboriosam nesciunt dignissimos repudiandae excepturi, delectus maxime sapiente eos consequuntur mollitia, rem consectetur ad voluptas, at ducimus cupiditate? Repellat?</p>
+        <form action="/login" method="POST">
+            <% errors.forEach((error) => { %>
+                <p class="notice"><%= error %></p>
+            <% }) %>
+            <fieldset>
+                <legend>Log In</legend>
+                <label for="username">
+                    <small>
+                        Username
+                    </small>
+                </label>
+                <input type="text" placeholder="Enter Username" id="username" name="username" autocomplete="off">
+    
+                <label for="password">
+                    <small>
+                        Password
+                    </small>
+                </label>
+                <input type="password" placeholder="Enter Password" id="password" name="password" autocomplete="off">
+                <br>
+    
+                <button>Log In</button>
+            </fieldset>
+        </form>
     </main>
-    <footer>
-        <small>
-            &copy; Our wonderfull app
-        </small>
-    </footer>
+    <%- include('includes/footer') %> 
 </body>
 </html>
