fixed some major bugs

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,8 +4,20 @@
 <body>
     <%- include('includes/header') %> 
     <main>
-        <h2>Welcome to your Dashboard</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla, iure accusamus consectetur non deserunt quaerat odit neque ducimus, quisquam mollitia dignissimos recusandae sunt, facilis distinctio necessitatibus quis modi autem officiis.</p>
+        <% if(!posts.length){ %>
+            <h3>Hello <%= user.userName %>, You do not have any posts yet!!</h3>
+        <% } else { %>
+            <h3>Hello <%= user.userName %>, Here are your posts!!</h3>
+        <% } %>
+        
+        <ul>
+            <% posts.forEach((post) => { %>
+                <li>
+                    <a href="post/<%= post.id %>"><%= post.title %></a>
+                    on <%= new Date(post.createdDate).getDate() %>/<%= new Date(post.createdDate).getMonth() + 1 %>/<%= new Date(post.createdDate).getFullYear() %>
+                </li>
+            <% })%>
+        </ul>
     </main>
     <%- include('includes/footer') %> 
 </body>
